@@ -1,24 +1,28 @@
-package gov.gsa.acr.cataloganalysis.service;
+package gov.gsa.acr.cataloganalysis.error;
 
 import gov.gsa.acr.cataloganalysis.model.XsbData;
+import gov.gsa.acr.cataloganalysis.util.StringUtils;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.stereotype.Service;
+import org.springframework.stereotype.Component;
+import reactor.core.publisher.Flux;
 
 import java.io.BufferedWriter;
 import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.io.Writer;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.text.SimpleDateFormat;
 import java.util.Date;
+import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Stream;
 
-@Service
+@Component
 @Slf4j
 public class ErrorHandler {
     /**
@@ -41,33 +45,46 @@ public class ErrorHandler {
             this.currentFileSizeInBytes = 0;
         }
 
-        public void println(String x, long len) {
-            ensureFileSizeWithinBounds(len);
-            super.println(x);
+        @Override
+        public void println(String x) {
+            long bytesAllowed = numBytesAllowed(x);
+            if (bytesAllowed > 0) {
+                this.currentFileSizeInBytes = this.currentFileSizeInBytes + bytesAllowed + lsBytes;
+                super.println(x);
+            }
+            else {
+                long numBytesRequested = this.currentFileSizeInBytes + x.getBytes().length + lsBytes;
+                throw new IllegalArgumentException("File size exceeded: " + numBytesRequested + " > " + this.maxBytes);
+            }
         }
 
         public long numBytesAllowed(String x){
             long numBytesRequested = x.getBytes().length;
-            if ( (this.currentFileSizeInBytes + numBytesRequested + lsBytes) < this.maxBytes) return numBytesRequested;
+            if (numBytesRequested > maxBytes)
+                throw new IllegalArgumentException("Error message is too long ("
+                                                   + numBytesRequested
+                                                   +" bytes) and exceeds the maximum allowed size for the error file ("
+                                                   +maxBytes
+                                                   +" bytes)");
+            if ( (this.currentFileSizeInBytes + numBytesRequested + lsBytes) < maxBytes)
+                return numBytesRequested;
             return 0;
-        }
-
-        private void ensureFileSizeWithinBounds(long len) {
-            long newFileSizeInBytes = this.currentFileSizeInBytes + len + lsBytes;
-            if (newFileSizeInBytes >= this.maxBytes)
-                throw new IllegalArgumentException("File size exceeded: " + newFileSizeInBytes + " > " + this.maxBytes);
-            this.currentFileSizeInBytes = newFileSizeInBytes;
         }
 
     }
 
-
-
-
     @Value("${error.file.size.max.bytes.per.file}")
+    @Getter
     private long maxErrorFileSizeBytes;
+
     @Value("${error.file.directory}")
+    @Getter
+    @Setter
     private String errorDirectory;
+
+    @Value("${error.threshold}")
+    @Getter
+    private Integer errorThreshold;
 
     private BoundedPrintWriter errorMsgWriter;
     private BoundedPrintWriter parseErrorWriter;
@@ -78,7 +95,6 @@ public class ErrorHandler {
     private String timeStamp;
 
     @Getter
-    @Setter
     private String header;
     private final String ls = System.getProperty("line.separator");
     @Getter
@@ -88,17 +104,58 @@ public class ErrorHandler {
     @Getter
     private AtomicInteger numFileErrors;
 
+    @Getter
+    @Setter
+    private AtomicInteger numRecordsSavedInTempDB;
+
+    @Getter
+    @Setter
+    private Boolean dataUploadFailed;
+
+    @Getter
+    @Setter
+    private List<String> errorFileNames;
+
+    private void deleteOldErrorFiles(){
+        try (Stream<Path> stream = Files.list(Path.of(errorDirectory)).filter(Files::isRegularFile).filter(p->p.getFileName().toString().matches(StringUtils.globToRegex("xsb_error_*")))) {
+            stream.forEach(p -> {
+                try {
+                    log.info("Cleaning up error directory, deleting old error file, " + p + ", from a previous execution.");
+                    Files.deleteIfExists(p);
+                } catch (Exception e) {
+                   throw new RuntimeException("Unexpected error. Unable to delete old error file from a previous execution: " + p, e);
+                }
+            });
+        }
+        catch (Exception e){
+            throw new RuntimeException("Unexpected error. Unable to delete old error files from previous executions.", e);
+        }
+
+    }
+
     public void init(String header){
         numParsingErrors = new AtomicInteger(0);
         numDbErrors = new AtomicInteger(0);
         numFileErrors = new AtomicInteger(0);
+        numRecordsSavedInTempDB = new AtomicInteger(0);
+        dataUploadFailed = Boolean.FALSE;
         errorMsgChunk = 0;
         parseErrorChunk = 0;
+        dbErrorChunk = 0;
         errorMsgWriter = null;
         parseErrorWriter = null;
         dbErrorWriter = null;
+        errorFileNames = null;
         this.header = header;
         timeStamp = new SimpleDateFormat("yyyyMMdd").format(new Date());
+
+        try {
+            Files.createDirectories(Path.of(errorDirectory));
+        } catch (Exception e) {
+            throw new RuntimeException("Unexpected error. Unable to create a new directory for storing error files.", e);
+        }
+
+        deleteOldErrorFiles();
     }
 
     public void close(){
@@ -116,35 +173,51 @@ public class ErrorHandler {
         }
     }
 
+    public Flux<Path> getErrorFiles() {
+        return Flux.using(
+                        () -> Files.list(Path.of(errorDirectory)).filter(Files::isRegularFile).filter(p -> p.getFileName().toString().matches(StringUtils.globToRegex("xsb_error_*_" + timeStamp + "_*"))),
+                        Flux::fromStream,
+                        Stream::close
+                )
+                .onErrorResume(e -> {
+                    log.error("Unable to get the error files.", e);
+                    return Flux.empty();
+                });
+    }
+
+
     public void handleParsingError(String xsbRecord, String srcFileName, String error){
+        numParsingErrors.incrementAndGet();
         handleError(xsbRecord, srcFileName, error, "PARSE");
     }
 
     public void handleDBError(XsbData xsbRecord, String error){
+        numDbErrors.incrementAndGet();
         handleError(xsbRecord.getSourceXsbDataString(), xsbRecord.getSourceXsbDataFileName(), error, "DB");
     }
 
     public void handleFileError(String srcFileName, String error, Throwable t){
-        handleError(error, srcFileName, t.getClass().getSimpleName(), "FILE");
+        numFileErrors.incrementAndGet();
+        handleError(error, srcFileName, t.toString(), "FILE");
     }
 
     private void handleError(String xsbRecord, String srcFileName, String error, String errorType){
         boolean tryAgain = false;
         try {
             if (errorMsgWriter == null) {
-                Path opPath = Paths.get(getErrorMessageFileName());
+                Path opPath = Path.of(getErrorMessageFileName());
                 BufferedWriter bw = Files.newBufferedWriter(opPath, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
                 errorMsgWriter = new BoundedPrintWriter(bw, maxErrorFileSizeBytes);
             }
             if (errorType.equals("DB") && dbErrorWriter == null) {
-                Path opPath = Paths.get(getDBErrorFileName());
+                Path opPath = Path.of(getDBErrorFileName());
                 BufferedWriter bw = Files.newBufferedWriter(opPath, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
                 dbErrorWriter = new BoundedPrintWriter(bw, maxErrorFileSizeBytes);
                 if (header == null || header.isBlank()) log.error("Error initializing the errorHandler. Header string is null");
                 else dbErrorWriter.println(header);
             }
             else if (errorType.equals("PARSE") && parseErrorWriter == null) {
-                Path opPath = Paths.get(getParseErrorFileName());
+                Path opPath = Path.of(getParseErrorFileName());
                 BufferedWriter bw = Files.newBufferedWriter(opPath, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
                 parseErrorWriter = new BoundedPrintWriter(bw, maxErrorFileSizeBytes);
                 if (header == null || header.isBlank()) log.error("Error initializing the errorHandler. Header string is null");
@@ -152,15 +225,10 @@ public class ErrorHandler {
             }
 
             StringBuilder sb = new StringBuilder();
-            sb.append(xsbRecord)
-                    .append(ls)
-                    .append("Source File: ")
-                    .append(srcFileName)
-                    .append(ls)
-                    .append("Error (s):")
-                    .append(ls)
-                    .append(error)
-                    .append(ls)
+            sb.append(xsbRecord).append(ls)
+                    .append("Source File: ").append(srcFileName).append(ls)
+                    .append("Error (s):").append(ls)
+                    .append(error).append(ls)
                     .append("------------------------------");
 
             // Check if this file has reached its max limit, if so then the number of allowed bytes will be zero.
@@ -195,18 +263,11 @@ public class ErrorHandler {
                 handleError(xsbRecord, srcFileName, error, errorType);
             }
             else {
-                errorMsgWriter.println(sb.toString(), numAllowedErrorMessageBytes);
-                if (errorType.equals("DB") && numAllowedDbErrorBytes > 0) {
-                    dbErrorWriter.println(xsbRecord, numAllowedDbErrorBytes);
-                    numDbErrors.incrementAndGet();
-                }
-                else if (errorType.equals("PARSE") && numAllowedParseErrorBytes > 0) {
-                    parseErrorWriter.println(xsbRecord, numAllowedParseErrorBytes);
-                    numParsingErrors.incrementAndGet();
-                }
-                else if (errorType.equals("FILE") ) {
-                    numFileErrors.incrementAndGet();
-                }
+                errorMsgWriter.println(sb.toString());
+                if (errorType.equals("DB") && numAllowedDbErrorBytes > 0)
+                    dbErrorWriter.println(xsbRecord);
+                else if (errorType.equals("PARSE") && numAllowedParseErrorBytes > 0)
+                    parseErrorWriter.println(xsbRecord);
             }
 
         } catch (Exception e) {
@@ -215,7 +276,11 @@ public class ErrorHandler {
 
     }
 
+    public Boolean anyRecordsToMoveFromStagingToFinal(){return numRecordsSavedInTempDB.get() > 0;}
 
+    public Boolean totalErrorsWithinAcceptableThreshold(){
+        return (numRecordsSavedInTempDB.get() > 0) && ((numDbErrors.get() + numParsingErrors.get()) < errorThreshold);
+    }
 
 
     private String getErrorMessageFileName(){
@@ -225,12 +290,16 @@ public class ErrorHandler {
 
     private String getParseErrorFileName(){
         String parseErrorSuffix = ".gsa";
-        return errorDirectory + "/xsb_parse_error_" + timeStamp + "_" + parseErrorChunk++ + parseErrorSuffix;
+        return errorDirectory + "/xsb_error_parse_" + timeStamp + "_" + parseErrorChunk++ + parseErrorSuffix;
     }
 
     private String getDBErrorFileName(){
         String dbErrorSuffix = ".gsa";
-        return errorDirectory + "/xsb_db_error_" + timeStamp + "_" + dbErrorChunk++ + dbErrorSuffix;
+        return errorDirectory + "/xsb_error_db_" + timeStamp + "_" + dbErrorChunk++ + dbErrorSuffix;
+    }
+
+    PrintWriter testBoundedPrintWriter(int maxAllowedBytes){
+        return new BoundedPrintWriter(new StringWriter(maxAllowedBytes), maxAllowedBytes);
     }
 
 }
